; ModuleID = '/home/carl/AnghaBench/xhyve/src/vmm/extr_vmm_api.c_xh_vm_get_memory_seg.c'
source_filename = "/home/carl/AnghaBench/xhyve/src/vmm/extr_vmm_api.c_xh_vm_get_memory_seg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vm_memory_segment = type { i64 }

@vm = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @xh_vm_get_memory_seg(i32 %0, i64* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i64*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.vm_memory_segment, align 8
  store i32 %0, i32* %3, align 4
  store i64* %1, i64** %4, align 8
  %7 = load i32, i32* @vm, align 4
  %8 = load i32, i32* %3, align 4
  %9 = call i32 @vm_gpabase2memseg(i32 %7, i32 %8, %struct.vm_memory_segment* %6)
  store i32 %9, i32* %5, align 4
  %10 = load i32, i32* %5, align 4
  %11 = icmp eq i32 %10, 0
  br i1 %11, label %12, label %16

12:                                               ; preds = %2
  %13 = getelementptr inbounds %struct.vm_memory_segment, %struct.vm_memory_segment* %6, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = load i64*, i64** %4, align 8
  store i64 %14, i64* %15, align 8
  br label %16

16:                                               ; preds = %12, %2
  %17 = load i32, i32* %5, align 4
  ret i32 %17
}

declare dso_local i32 @vm_gpabase2memseg(i32, i32, %struct.vm_memory_segment*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
